[project]
name = "stock-price-pipeline"
version = "0.1.0"
description = "Dagster pipeline for fetching stock prices and sending email updates"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.0",
    "dagster-webserver>=1.8.0",
    "requests>=2.31.0",
    "dagster-polars>=0.27.8",
]
